# gscunit

./: .eslintrc  .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc  .yarnrc.yml  CMakeLists.txt  README.md  conanfile.txt  eslint.config.js  package.json  tsconfig.json
.github/workflows/: application.yaml
cmake/: gscunit.cmake
libs/gscunit/: _main.gsc  _utils.gsc
runtime/: CMakeLists.txt
runtime/main/: iw_11.iwd
runtime/zone/english/: localized_code_post_gfx_mp.ff  mp_gscunit.ff  mp_gscunit_load.ff
scripts/: build.node.ts  build.ts  publish.ts
src/: CLI.ts  CMakeLists.txt  gscunit.cpp
src/__test__/: CMakeLists.txt
